# PrayTimesRust

./: .codespellrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  postman.json
lib/praytimes/: Cargo.toml  README.md
lib/praytimes/src/: internal_calculator.rs  iter.rs  lib.rs  methods.rs  types.rs
lib/praytimes/src/utils/: mod.rs
lib/praytimes/tests/: match.rs
src/: calculator.rs  internal_calculator.rs  lib.rs  methods.rs  types.rs
src/utils/: d_math.rs  julian_date.rs  numbers.rs  sun_position.rs
tests/: match.rs
