[package]
name = "pray_times"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0", optional = true ,features=["derive"]}

[dev-dependencies]
serde_json = "1.0.104"

[features]
serde = ["dep:serde","chrono/serde"]

[[test]]
name = "tests"
path = "./tests/match.rs"
test = true
required-features = ["serde"]
